# basic-wm

./: CMakeLists.txt
src/: main.cpp
src/wm/: wm.cpp  wm.hpp
